alterações no projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
    <html lang="pt-br">
+   <meta name="description" content="Site">
+   <link rel="stylesheet" href="login.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 <head>
      <meta charset="UTF-8">
@@ -19,7 +21,7 @@
               <ul>
                 <li><a href="#">Nossos serviços</a></li>
                 <li><a href="#">Sobre nós</a></li>
-                <li><a href="#" onclick="Modal.open()">Login</a></li>
+                <li><a href="cadastro.html">Login</a></li>
               </ul>
             </div>
           </div>
@@ -59,25 +61,7 @@
              </div>
            </div>
 
-           <div id="Login">
-            <div class="container">
-               <div class="modal-overlay">
-                <div class="modal-overlay-box">
-                   <form method="get">
-                    <i class="fa-solid fa-xmark" onclick="modal.close()"></i>
-                     <h2>Login</h2>
-                     <br>
-                      <input type="email" id="email" placeholder="Digite seu email" required>
-                      <input type="password" id="senha" placeholder="Digite sua senha" required>
-                      <a href="#">Ainda não possui login? Cadastre se</a>
-                      <button type="submit" id="login" onclick="login()">entrar</button>
-                    </form>
-                  </div>
-               </div>
-            </div>
-           </div>
-        </main>
-
+          
         <footer>
           <div class="container">
             <p>Feito com amor por um aluno &hearts; Sptech &copy;</p>
