--- a/cadastro.html
+++ b/cadastro.html
@@ -17,29 +17,39 @@
   
               <div class="menu">
                 <ul>
-                  <li><a href="#">Inicial</a></li>
+                  <li><a href="#home">Inicial</a></li>
                   <li><a href="#">Simulador</a>|</li>
-                  <li><a href="#">login</a></li>
-                  <li><a href="#">Cadastro</a></li>
+                  <li><a href="login.html">login</a></li>
+                  <li><a href="cadastro.html">Cadastro</a></li>
                 </ul>
               </div>
             </div>
           </header>
 
-          <div class="container-formulário">
-            <div class="container">
-              <form>
-                <label for="nome"></label>
-                <input type="text" placeholder="nome" id="nome">
-
-                <label for="cidade"></label>
-                <input type="text" placeholder="cidade" id="cidade">
-
-                <label for="email"></label>
-                <input type="email" placeholder="email" id="email">
-
-                <label for="telefone"></label>
-                <input type="tel"  placeholder="telefone">
+          <div class="modal-overlay">
+            <div class="modal">
+              <h3>Cadastro</h3>
+              <form action="" method="get">
+                <label for="nome">Nome</label>
+                <br>
+                <input type="text" name="nome" id="nome" placeholder="nome"><br>
+                <label for="email">email</label>
+                <br>
+                <input type="email" name="email" id="email" placeholder="email">
+                <br>
+                <label for="telefone">Telefone</label>
+                <br><input type="tel" name="telefone" id="telefone" placeholder="telefone">
+                <br>
+                <label for="senha">Senha</label>
+                <br>
+                <input type="password" name="password" id="senha" placeholder="senha">
+                <br>
+                <label for="senha">Confirmar asenha</label>
+                <br>
+                <input type="password" name="password_confirmation" id="confirm" placeholder="Confirmar senha">
+                <br>
+                <button>Cadastrar</button>
+                <br>
               </form>
             </div>
           </div>
