alteração nos arquivos e separação em pastas

--- a/html/index.html
+++ b/html/index.html
@@ -67,6 +67,6 @@
             <p>Feito com amor por um aluno &hearts; Sptech &copy;</p>
           </div>
        </footer>
-       <script src="script.js"></script>
+       <script src="../js/cadastro.js"></script>
     </body>
 </html>
