--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-  <html lang="pt-br">
+    <html lang="pt-br">
     <link rel="stylesheet" href="../html/index.html">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/cadastro.css">
+    <link rel="stylesheet" href="../css/cadastro.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
