--- a/html/login.html
+++ b/html/login.html
@@ -28,7 +28,7 @@
 
           <div class="modal-overlay">
             <div class="modal">
-              <h3>Cadastro</h3>
+              <h3>Login</h3>
               <form action="" method="get">
                 <label for="email">email</label>
                 <br>
@@ -38,7 +38,7 @@
                 <br>
                 <input type="password" name="password" id="senha" placeholder="senha">
                 <br>
-                <button>login</button>
+                <button onclick="console.login();">login</button>
                 <br>
               </form>
             </div>
@@ -52,4 +52,5 @@
             </div>
           </footer>
     </body>
+    <script src="../js/login.js"></script>
 </html>
