--- a/html/login.html
+++ b/html/login.html
@@ -38,7 +38,9 @@
                 <br>
                 <input type="password" name="password" id="senha" placeholder="senha">
                 <br>
-                <button onclick="console.login();">login</button>
+                <a href="cadastro.html">Cadastre-se</a>
+                <br>
+                <button onclick="login();">login</button>
                 <br>
               </form>
             </div>
@@ -52,5 +54,5 @@
             </div>
           </footer>
     </body>
-    <script src="../js/login.js"></script>
 </html>
+<script src="../js/login.js"></script>
