corrigindo link de imagens

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
              <div class="container">
               <div class="caixas">
                 <div class="caixa">
-                  <img src="./assets/img/planet-earth_color.png" alt="ícone da missão da empresa Aquatech">
+                  <img src="../assets/img/planet-earth_color.png" alt="ícone da missão da empresa Aquatech">
   
                   <h4>Missão</h4>
                   <br>
@@ -46,13 +46,13 @@
                 </div>
   
                 <div class="caixa">
-                  <img src="./assets/img/lightbulb_color.png" alt="ícone da visão da empresa Aquatech">
+                  <img src="../assets/img/lightbulb_color.png" alt="ícone da visão da empresa Aquatech">
                   <h4>Visão</h4>
                   <br>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
                 <div class="caixa">
-                  <img src="./assets/img/growth_color.png" alt="Ícone dos valores da empresa Aquatech">
+                  <img src="../assets/img/growth_color.png" alt="Ícone dos valores da empresa Aquatech">
                   <h4>Valores</h4>
                   <br>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
