--- a/html/index.html
+++ b/html/index.html
@@ -12,16 +12,18 @@
 </head>
     <body>
         <header>
-          <div class="logo">
-            <h1>Aquatech</h1>
-          </div>
-
           <div class="menu">
-            <ul>
-              <li><a href="#">Nossos serviços</a></li>
-              <li><a href="#">Sobre nós</a></li>
-              <li><a href="cadastro.html">Login</a></li>
-            </ul>
+            <div class="logo">
+              <h1>Aquatech</h1>
+            </div>
+  
+            <div class="menu-links">
+              <ul>
+                <li><a href="#">Nossos serviços</a></li>
+                <li><a href="#">Sobre nós</a></li>
+                <li><a href="cadastro.html">Login</a></li>
+              </ul>
+            </div>
           </div>
         </header>
 
