--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,8 @@
               <ul>
                 <li><a href="#">Nossos serviços</a></li>
                 <li><a href="#">Sobre nós</a></li>
-                <li><a href="cadastro.html">Login</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="cadastro.html">cadastro</a></li>
               </ul>
             </div>
           </div>
