--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
   
               <div class="menu">
                 <ul>
-                  <li><a href="#home">Inicial</a></li>
+                  <li><a href="index.html">Inicial</a></li>
                   <li><a href="#">Simulador</a>|</li>
                   <li><a href="login.html">login</a></li>
                   <li><a href="cadastro.html">Cadastro</a></li>
