--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -17,10 +17,10 @@
   
               <div class="menu">
                 <ul>
-                  <li><a href="#home">Inicial</a></li>
-                  <li><a href="#">Simulador</a>|</li>
+                  <li><a href="index.html">Inicial</a></li>
+                  <li><a href="#simulador.html">Simulador</a>|</li>
                   <li><a href="login.html">login</a></li>
-                  <li><a href="cadastro.html">Cadastro</a></li>
+                  <li><a href="#">Cadastro</a></li>
                 </ul>
               </div>
             </div>
