--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -41,7 +41,7 @@
                 <br>
                 <input type="password" name="password" id="senha" placeholder="senha">
                 <br>
-                <button>Cadastrar</button>
+                <button onclick="cadastrar()">Cadastrar</button>
                 <br>
               </form>
             </div>
