corrigindo nome da função no evento onclick do  botão no html

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -41,7 +41,7 @@
                 <br>
                 <input type="password" name="password" id="senha" placeholder="senha">
                 <br>
-                <button onclick="cadastrar()">Cadastrar</button>
+                <button onclick="cadastro()">Cadastrar</button>
                 <br>
               </form>
             </div>
